# fyfsp

./: .cproject  .gitignore  .project  .travis.yml  Makefile.am  README.pod  autogen.sh  cache.c  cache.h  colorize-debugs  configure.ac  fyfsp.c  fyfsp.pod  global-types.h  map-20-clocks.pl  my-types.h  render-clock.pl  ubuntu-system-install.sh  upstart.conf  window.c  window.h  xquery.c  xquery.h
debian/: .gitignore  changelog  control  copyright  fyfsp.install  rules
